# cursor-IDE-API

./: .coverage  .cursorrules  .gitignore  README.md  main.py  posts.db  pyproject.toml  requirements.txt  what_learned.md
configurations/: .config
database/: sql_app.db
src/database/: -- SQLite.sql  config.py  models.py  test_data.py
src/models/: post.py  user.py
src/router/: name_router.py  post_router.py  user_router.py
src/utils/: auth.py  config.py  letter_counter.py  logger.py
tests/: conftest.py  test_api.py  test_post_router.py  test_utils.py
