[project]
name = "cursor-learn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt==4.0.1",
    "email-validator>=2.2.0",
    "fastapi>=0.115.10",
    "flask-sqlalchemy>=3.1.1",
    "httpx>=0.28.1",
    "pandas>=2.2.3",
    "passlib[bcrypt]>=1.7.4",
    "pytest-asyncio>=0.25.3",
    "pytest-cov>=6.0.0",
    "pytest-html>=4.1.1",
    "pytest-xdist>=3.6.1",
    "python-jose>=3.4.0",
    "python-multipart>=0.0.20",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
